# Distributed-Technographic-Discovery-Engine

./: .coverage  .dockerignore  .env.example  README.md  detect.py  docker-compose.yml  project_build_plan.md  requirements-dev.txt  requirements.txt  results.csv  test_batch.txt  test_domains.txt  training_data.json
.github/workflows/: cd.yml  ci.yml  security.yml
crawler/: Cargo.toml
crawler/crates/crawler-core/: Cargo.toml
crawler/crates/crawler-core/src/: config.rs  dns_resolver.rs  error.rs  fetcher.rs  main.rs  payload.rs  rate_limiter.rs  robots.rs  tls_inspector.rs  user_agent.rs
crawler/crates/crawler-kafka/: Cargo.toml
crawler/crates/crawler-kafka/src/: producer.rs
crawler/crates/crawler-scheduler/: Cargo.toml
crawler/src/: main.rs
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx
dashboard/app/companies/: page.tsx
dashboard/app/companies/[domain]/: page.tsx
dashboard/app/trends/: page.tsx
dashboard/components/: DataTable.tsx  SearchBar.tsx  Sidebar.tsx  TechProfile.tsx  TechTimeline.tsx  TechnologySelector.tsx
dashboard/lib/: api.ts  types.ts
docker/: Dockerfile.api  Dockerfile.crawler  Dockerfile.dashboard  Dockerfile.worker  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  RUNBOOKS.md  TROUBLESHOOTING.md
helm/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  crawler-deployment.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secret.yaml  servicemonitor.yaml  worker-deployment.yaml
k8s/base/: configmap.yaml  crawler-deployment.yaml  kustomization.yaml  namespace.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secret.yaml  worker-deployment.yaml
k8s/monitoring/: alertmanager-config.yaml  prometheus-config.yaml
k8s/monitoring/grafana-dashboards/: techdetector.json
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_add_organizations.sql  004_add_api_keys.sql  005_add_webhooks.sql  006_add_row_level_security.sql  migrate.py
models/tech_ner/: meta.json
models/tech_ner/ner/: model  moves
models/tech_ner/vocab/: strings.json
processor/: main.py  pyproject.toml  requirements.txt
rust_crawler/: Cargo.toml  errors.txt
rust_crawler/src/: dns.rs  fetcher.rs  main.rs  metrics.rs  publisher.rs  rate_limiter.rs  robots.rs  tls.rs
scripts/: create_topics.sh  enqueue_domains.py  migrate_sqlite_to_postgres.py  monitor.py  test_rls.py  update_signatures.py
shared/configs/: README.md
shared/schemas/: README.md
techdetector/: __init__.py  __main__.py  batch_scanner.py  career_crawler.py  cli.py  config.py  export.py  fetcher.py  metrics.py  models.py  orchestrator.py  rate_limiter.py  robots_parser.py  scanner.py  signatures.json  storage.py
techdetector/api/: __init__.py  main.py
techdetector/api/auth/: __init__.py  api_keys.py
techdetector/api/middleware/: __init__.py  rate_limit.py  tenant.py
techdetector/api/models/: __init__.py  requests.py  responses.py
techdetector/api/routes/: __init__.py  companies.py  exports.py  search.py  technologies.py  webhooks.py
techdetector/detectors/: __init__.py  base.py  dns_detector.py  header_detector.py  html_detector.py  job_posting_detector.py
techdetector/ml/: __init__.py  enhanced_detector.py  train_ner.py
techdetector/webhooks/: __init__.py  dispatcher.py  handlers.py
techdetector/workers/: __init__.py  consumer.py  health.py  main.py  processor.py
tests/: conftest.py
tests/e2e/: test_distributed_crawl.py
tests/integration/: test_full_scan.py  test_worker_pipeline.py
tests/unit/: test_detectors.py  test_rate_limiter.py  test_storage.py
