[workspace]
members = [
    "crates/crawler-core",
    "crates/crawler-kafka",
    "crates/crawler-scheduler",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
hickory-resolver = "0.24"
url = "2.5"
bytes = "1.5"
dashmap = "5.5"
governor = "0.6"     # rate limiting
rand = "0.8"
chrono = "0.4"
rustls = "0.22"
x509-parser = "0.16"
webpki-roots = "0.26"
