[package]
# Package metadata for the Rust crawler component of the
# Distributed Technographic Discovery Engine.
# This crate will eventually handle high-throughput async web crawling,
# DNS/TLS inspection, and technology fingerprinting at scale.
name = "crawler"
version = "0.1.0"
edition = "2021"
description = "High-throughput async web crawler for technographic discovery"

[dependencies]
# tokio — The industry-standard async runtime for Rust.
# We enable the "full" feature set which includes:
#   - multi-threaded scheduler (work-stealing)
#   - I/O driver, timer, signal handling
#   - macros like #[tokio::main]
# WHY ASYNC FROM THE START: The crawler will eventually make thousands of
# concurrent HTTP requests. Using async/await with tokio lets us handle
# massive concurrency on a small number of OS threads — far more efficient
# than spawning a thread per request.
tokio = { version = "1", features = ["full"] }

# reqwest — A high-level, ergonomic HTTP client built on top of hyper.
# We enable "rustls-tls" for TLS support without depending on OpenSSL,
# which simplifies cross-platform builds and container deployments.
# In later phases, we'll use reqwest's redirect policies, header inspection,
# and connection pooling for efficient crawling.
reqwest = { version = "0.12", features = ["rustls-tls"] }
