[project]
name = "technographic-processor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "spacy>=3.7.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]
