[package]
name = "rust_crawler"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies", "gzip", "rustls-tls"] }
trust-dns-resolver = "0.23"
rustls = "0.21"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-rustls = "0.24"
