[package]
name = "crawler-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hickory-resolver.workspace = true
url.workspace = true
bytes.workspace = true
dashmap.workspace = true
governor.workspace = true
rand.workspace = true
chrono.workspace = true
rustls.workspace = true
x509-parser.workspace = true
webpki-roots.workspace = true
crawler-kafka = { path = "../crawler-kafka" }
crawler-scheduler = { path = "../crawler-scheduler" }
robotstxt = "0.3"
